bug 166127 search string in Japanese doesn't match exactly : patch by saito@densan.co.jp, r/sr=jst, a=asa